kt/parser/parser.output
Terminals which are not used

   START_TOK_SCRIPT
   START_TOK_GDECL
   "directory"
   "alias"
   "try"
   "catch"
   "finally"
   "when"
   "integer"
   "float"
   "boolean"
   "string"
   "file"
   ILLEGAL_TOKEN
   STRING_CONSTANT
   "::"


Grammar

    0 $accept: start $end

    1 start: declaration_list

    2 declaration_list: declaration
    3                 | declaration_list declaration

    4 declaration: compound_declaration
    5            | state_declaration
    6            | facet_declaration
    7            | type_declaration
    8            | slot_declaration
    9            | slot_assignment_declaration
   10            | function_declaration
   11            | method_declaration

   12 compound_declaration: class_declaration
   13                     | object_declaration
   14                     | record_declaration
   15                     | connection_declaration

   16 class_declaration: is_public "class" IDENTIFIER declaration_parameters parent_specifier facet_list_specifier transmission_list_specifier end_token compound_body optional_end_token

   17 is_public: /* empty */
   18          | "public"

   19 declaration_parameters: /* empty */
   20                       | '(' optional_parameter_list ')'

   21 optional_parameter_list: /* empty */
   22                        | parameter_list

   23 parameter_list: IDENTIFIER optional_type_specifier
   24               | parameter_list ',' IDENTIFIER optional_type_specifier

   25 parent_specifier: /* empty */
   26                 | ':' locator
   27                 | ':' locator '(' expression_list ')'

   28 locator: IDENTIFIER
   29        | PATH

   30 facet_list_specifier: /* empty */
   31                     | "in" facet_name_list

   32 facet_name_list: IDENTIFIER
   33                | facet_name_list ',' IDENTIFIER

   34 transmission_list_specifier: /* empty */
   35                            | transmission_list

   36 transmission_list: transmission_specifier
   37                  | transmission_list ',' transmission_specifier

   38 transmission_specifier: "from" IDENTIFIER "to" IDENTIFIER "via" locator

   39 compound_body: /* empty */
   40              | INDENT DEDENT
   41              | INDENT declaration_list DEDENT

   42 object_declaration: is_public "object" IDENTIFIER parent_specifier facet_list_specifier end_token compound_body optional_end_token
   43                   | IDENTIFIER parent_specifier facet_list_specifier end_token compound_body optional_end_token

   44 record_declaration: is_public "record" IDENTIFIER declaration_parameters parent_specifier facet_list_specifier end_token compound_body optional_end_token

   45 connection_declaration: is_public "connection" IDENTIFIER parent_specifier between_specifier end_token compound_body optional_end_token

   46 between_specifier: "between" IDENTIFIER ',' IDENTIFIER

   47 state_declaration: is_public "state" IDENTIFIER transmission_list_specifier end_token compound_body optional_end_token

   48 facet_declaration: "facet" IDENTIFIER end_token compound_body optional_end_token

   49 type_declaration: is_public "type" IDENTIFIER type_specifier end_token optional_end_token

   50 type_specifier: locator
   51               | type_specifier "&"
   52               | type_specifier array_specifier
   53               | map_specifier

   54 array_specifier: '[' ']'
   55                | '[' expression ']'

   56 map_specifier: '{' '}'
   57              | '{' type_specifier ',' type_specifier '}'

   58 optional_type_specifier: /* empty */
   59                        | ':' type_specifier

   60 slot_declaration: is_public is_shared "var" IDENTIFIER optional_assignment_expression end_token
   61                 | is_public is_shared "var" IDENTIFIER ':' type_specifier optional_assignment_expression end_token

   62 variable_declaration_statement: is_shared "var" IDENTIFIER optional_assignment_expression end_token
   63                               | is_shared "var" IDENTIFIER ':' type_specifier optional_assignment_expression end_token

   64 is_shared: /* empty */
   65          | "shared"

   66 optional_assignment_expression: /* empty */
   67                               | '=' expression

   68 slot_assignment_declaration: IDENTIFIER '=' expression end_token

   69 function_declaration: is_public is_shared "function" IDENTIFIER '(' optional_parameter_list ')' optional_return_type facet_list_specifier end_token function_body optional_end_token

   70 method_declaration: is_public is_shared "method" IDENTIFIER selector_decl_args optional_return_type facet_list_specifier end_token function_body optional_end_token
   71                   | is_public is_shared "method" IDENTIFIER optional_return_type facet_list_specifier end_token function_body optional_end_token

   72 selector_decl_args: ':' optional_selector_type_spec IDENTIFIER
   73                   | selector_decl_args ':' optional_selector_type_spec IDENTIFIER
   74                   | selector_decl_args IDENTIFIER ':' optional_selector_type_spec IDENTIFIER

   75 optional_selector_type_spec: /* empty */
   76                            | '(' type_specifier ')'

   77 optional_end_token: /* empty */
   78                   | END_TOK

   79 end_token: END_TOK

   80 function_declaration_statement: "function" IDENTIFIER '(' optional_parameter_list ')' optional_return_type end_token function_body

   81 optional_return_type: /* empty */
   82                     | "->" type_specifier

   83 function_body: /* empty */
   84              | INDENT statement_list DEDENT

   85 statement_list: /* empty */
   86               | non_empty_statement_list

   87 non_empty_statement_list: statement
   88                         | non_empty_statement_list statement

   89 statement: if_statement
   90          | while_statement
   91          | do_while_statement
   92          | for_statement
   93          | switch_statement
   94          | function_declaration_statement
   95          | variable_declaration_statement
   96          | "break" end_token
   97          | "continue" end_token
   98          | "return" end_token
   99          | "return" expression end_token
  100          | expression_statement end_token

  101 statement_block: INDENT statement_list DEDENT

  102 switch_statement: "switch" expression end_token INDENT switch_list optional_default DEDENT

  103 switch_list: switch_element
  104            | switch_list switch_element

  105 optional_default: /* empty */
  106                 | "default" end_token statement_block

  107 switch_element: switch_label_list statement_block

  108 switch_label_list: switch_label
  109                  | switch_label_list switch_label

  110 constant_atom: INT_CONSTANT
  111              | FLOAT_CONSTANT
  112              | fragmented_string

  113 switch_label: "case" constant_atom end_token

  114 if_statement: "if" expression end_token statement_block
  115             | "if" expression end_token statement_block "else" end_token statement_block

  116 while_statement: "while" expression end_token statement_block

  117 do_while_statement: "do" end_token statement_block "while" expression end_token

  118 for_statement: "for" expression ';' expression ';' expression end_token statement_block
  119              | "for" "var" IDENTIFIER optional_type_specifier '=' expression ';' expression ';' expression end_token statement_block

  120 primary_expression: IDENTIFIER
  121                   | PATH
  122                   | INT_CONSTANT
  123                   | method_call
  124                   | FLOAT_CONSTANT
  125                   | fragmented_string
  126                   | '(' expression ')'
  127                   | array_expression
  128                   | map_expression

  129 method_call: '[' expression IDENTIFIER selector_args ']'
  130            | '[' expression IDENTIFIER ']'

  131 selector_args: ':' expression
  132              | selector_args ':' expression
  133              | selector_args IDENTIFIER ':' expression

  134 fragmented_string: STRING_FRAGMENT fragment_or_ident_or_empty_list STRING_END

  135 fragment_or_ident_or_empty_list: /* empty */
  136                                | fragment_or_ident_list

  137 fragment_or_ident_list: STRING_FRAGMENT
  138                       | IDENTIFIER
  139                       | fragment_or_ident_list STRING_FRAGMENT
  140                       | fragment_or_ident_list IDENTIFIER

  141 postfix_expression: primary_expression
  142                   | postfix_expression '[' expression ']'
  143                   | postfix_expression '(' ')'
  144                   | postfix_expression '(' argument_expression_list ')'
  145                   | postfix_expression '.' IDENTIFIER
  146                   | postfix_expression "++"
  147                   | postfix_expression "--"

  148 argument_expression_list: assignment_expression
  149                         | argument_expression_list ',' assignment_expression

  150 unary_expression: postfix_expression
  151                 | "++" unary_expression
  152                 | "--" unary_expression
  153                 | '-' unary_expression
  154                 | '!' unary_expression
  155                 | '~' unary_expression

  156 multiplicative_expression: unary_expression
  157                          | multiplicative_expression '*' unary_expression
  158                          | multiplicative_expression '/' unary_expression
  159                          | multiplicative_expression '%' unary_expression

  160 additive_expression: multiplicative_expression
  161                    | additive_expression '+' multiplicative_expression
  162                    | additive_expression '-' multiplicative_expression

  163 shift_expression: additive_expression
  164                 | shift_expression "<<" additive_expression
  165                 | shift_expression ">>" additive_expression

  166 relational_expression: shift_expression
  167                      | relational_expression '<' shift_expression
  168                      | relational_expression '>' shift_expression
  169                      | relational_expression "<=" shift_expression
  170                      | relational_expression ">=" shift_expression

  171 equality_expression: relational_expression
  172                    | equality_expression "==" relational_expression
  173                    | equality_expression "!=" relational_expression

  174 and_expression: equality_expression
  175               | and_expression '&' equality_expression

  176 exclusive_or_expression: and_expression
  177                        | exclusive_or_expression '^' and_expression

  178 inclusive_or_expression: exclusive_or_expression
  179                        | inclusive_or_expression '|' exclusive_or_expression

  180 logical_and_expression: inclusive_or_expression
  181                       | logical_and_expression "&&" inclusive_or_expression

  182 logical_or_expression: logical_and_expression
  183                      | logical_or_expression "||" logical_and_expression

  184 strcat_expression: logical_or_expression
  185                  | strcat_expression '@' logical_or_expression
  186                  | strcat_expression "NL" logical_or_expression
  187                  | strcat_expression "SPC" logical_or_expression
  188                  | strcat_expression "TAB" logical_or_expression

  189 strcat_or_func_expression: strcat_expression
  190                          | function_expression

  191 conditional_expression: strcat_or_func_expression
  192                       | strcat_or_func_expression '?' expression ':' conditional_expression

  193 assignment_expression: conditional_expression
  194                      | unary_expression '=' assignment_expression
  195                      | unary_expression float_assignment_operator assignment_expression
  196                      | unary_expression int_assignment_operator assignment_expression

  197 float_assignment_operator: "*="
  198                          | "/="
  199                          | "+="
  200                          | "-="

  201 int_assignment_operator: "%="
  202                        | "<<="
  203                        | ">>="
  204                        | "&="
  205                        | "^="
  206                        | "|="

  207 expression: assignment_expression

  208 expression_statement: expression

  209 array_expression: '[' ']'
  210                 | '[' expression_list ']'
  211                 | '[' expression_list ',' ']'

  212 map_expression: '{' '}'
  213               | '{' map_pair_list '}'
  214               | '{' map_pair_list ',' '}'

  215 expression_list: expression
  216                | expression_list ',' expression

  217 map_pair_list: map_pair
  218              | map_pair_list ',' map_pair

  219 map_pair: expression ':' expression

  220 function_expression: "function" '(' optional_parameter_list ')' optional_return_type '(' expression ')'


Terminals, with rules where they appear

$end (0) 0
'!' (33) 154
'%' (37) 159
'&' (38) 175
'(' (40) 20 27 69 76 80 126 143 144 220
')' (41) 20 27 69 76 80 126 143 144 220
'*' (42) 157
'+' (43) 161
',' (44) 24 33 37 46 57 149 211 214 216 218
'-' (45) 153 162
'.' (46) 145
'/' (47) 158
':' (58) 26 27 59 61 63 72 73 74 131 132 133 192 219
';' (59) 118 119
'<' (60) 167
'=' (61) 67 68 119 194
'>' (62) 168
'?' (63) 192
'@' (64) 185
'[' (91) 54 55 129 130 142 209 210 211
']' (93) 54 55 129 130 142 209 210 211
'^' (94) 177
'{' (123) 56 57 212 213 214
'|' (124) 179
'}' (125) 56 57 212 213 214
'~' (126) 155
error (256)
START_TOK_SCRIPT (258)
START_TOK_GDECL (259)
"state" (260) 47
"between" (261) 46
"object" (262) 42
"class" (263) 16
"record" (264) 44
"directory" (265)
"connection" (266) 45
"alias" (267)
"facet" (268) 48
"in" (269) 31
"from" (270) 38
"to" (271) 38
"via" (272) 38
"try" (273)
"catch" (274)
"finally" (275)
"when" (276)
"function" (277) 69 80 220
"method" (278) 70 71
"return" (279) 98 99
"while" (280) 116 117
"for" (281) 118 119
"break" (282) 96
"continue" (283) 97
"if" (284) 114 115
"else" (285) 115
"switch" (286) 102
"case" (287) 113
"default" (288) 106
"var" (289) 60 61 62 63 119
"integer" (290)
"float" (291)
"boolean" (292)
"string" (293)
"shared" (294) 65
"public" (295) 18
"file" (296)
ILLEGAL_TOKEN (297)
INT_CONSTANT (298) 110 122
IDENTIFIER (299) 16 23 24 28 32 33 38 42 43 44 45 46 47 48 49 60 61
    62 63 68 69 70 71 72 73 74 80 119 120 129 130 133 138 140 145
STRING_CONSTANT (300)
FLOAT_CONSTANT (301) 111 124
PATH (302) 29 121
STRING_FRAGMENT (303) 134 137 139
STRING_END (304) 134
INDENT (305) 40 41 84 101 102
DEDENT (306) 40 41 84 101 102
"->" (307) 82
"--" (308) 147 152
"++" (309) 146 151
"<<" (310) 164
">>" (311) 165
"+=" (312) 199
"-=" (313) 200
"*=" (314) 197
"/=" (315) 198
"%=" (316) 201
"&=" (317) 204
"^=" (318) 205
"|=" (319) 206
"<<=" (320) 202
">>=" (321) 203
"==" (322) 172
"!=" (323) 173
">=" (324) 170
"<=" (325) 169
"&&" (326) 181
"||" (327) 183
"::" (328)
"NL" (329) 186
"SPC" (330) 187
"TAB" (331) 188
END_TOK (332) 78 79
"type" (333) 49
"&" (334) 51
"do" (335) 117


Nonterminals, with rules where they appear

$accept (106)
    on left: 0
start (107)
    on left: 1, on right: 0
declaration_list (108)
    on left: 2 3, on right: 1 3 41
declaration (109)
    on left: 4 5 6 7 8 9 10 11, on right: 2 3
compound_declaration (110)
    on left: 12 13 14 15, on right: 4
class_declaration (111)
    on left: 16, on right: 12
is_public (112)
    on left: 17 18, on right: 16 42 44 45 47 49 60 61 69 70 71
declaration_parameters (113)
    on left: 19 20, on right: 16 44
optional_parameter_list (114)
    on left: 21 22, on right: 20 69 80 220
parameter_list (115)
    on left: 23 24, on right: 22 24
parent_specifier (116)
    on left: 25 26 27, on right: 16 42 43 44 45
locator (117)
    on left: 28 29, on right: 26 27 38 50
facet_list_specifier (118)
    on left: 30 31, on right: 16 42 43 44 69 70 71
facet_name_list (119)
    on left: 32 33, on right: 31 33
transmission_list_specifier (120)
    on left: 34 35, on right: 16 47
transmission_list (121)
    on left: 36 37, on right: 35 37
transmission_specifier (122)
    on left: 38, on right: 36 37
compound_body (123)
    on left: 39 40 41, on right: 16 42 43 44 45 47 48
object_declaration (124)
    on left: 42 43, on right: 13
record_declaration (125)
    on left: 44, on right: 14
connection_declaration (126)
    on left: 45, on right: 15
between_specifier (127)
    on left: 46, on right: 45
state_declaration (128)
    on left: 47, on right: 5
facet_declaration (129)
    on left: 48, on right: 6
type_declaration (130)
    on left: 49, on right: 7
type_specifier (131)
    on left: 50 51 52 53, on right: 49 51 52 57 59 61 63 76 82
array_specifier (132)
    on left: 54 55, on right: 52
map_specifier (133)
    on left: 56 57, on right: 53
optional_type_specifier (134)
    on left: 58 59, on right: 23 24 119
slot_declaration (135)
    on left: 60 61, on right: 8
variable_declaration_statement (136)
    on left: 62 63, on right: 95
is_shared (137)
    on left: 64 65, on right: 60 61 62 63 69 70 71
optional_assignment_expression (138)
    on left: 66 67, on right: 60 61 62 63
slot_assignment_declaration (139)
    on left: 68, on right: 9
function_declaration (140)
    on left: 69, on right: 10
method_declaration (141)
    on left: 70 71, on right: 11
selector_decl_args (142)
    on left: 72 73 74, on right: 70 73 74
optional_selector_type_spec (143)
    on left: 75 76, on right: 72 73 74
optional_end_token (144)
    on left: 77 78, on right: 16 42 43 44 45 47 48 49 69 70 71
end_token (145)
    on left: 79, on right: 16 42 43 44 45 47 48 49 60 61 62 63 68 69
    70 71 80 96 97 98 99 100 102 106 113 114 115 116 117 118 119
function_declaration_statement (146)
    on left: 80, on right: 94
optional_return_type (147)
    on left: 81 82, on right: 69 70 71 80 220
function_body (148)
    on left: 83 84, on right: 69 70 71 80
statement_list (149)
    on left: 85 86, on right: 84 101
non_empty_statement_list (150)
    on left: 87 88, on right: 86 88
statement (151)
    on left: 89 90 91 92 93 94 95 96 97 98 99 100, on right: 87 88
statement_block (152)
    on left: 101, on right: 106 107 114 115 116 117 118 119
switch_statement (153)
    on left: 102, on right: 93
switch_list (154)
    on left: 103 104, on right: 102 104
optional_default (155)
    on left: 105 106, on right: 102
switch_element (156)
    on left: 107, on right: 103 104
switch_label_list (157)
    on left: 108 109, on right: 107 109
constant_atom (158)
    on left: 110 111 112, on right: 113
switch_label (159)
    on left: 113, on right: 108 109
if_statement (160)
    on left: 114 115, on right: 89
while_statement (161)
    on left: 116, on right: 90
do_while_statement (162)
    on left: 117, on right: 91
for_statement (163)
    on left: 118 119, on right: 92
primary_expression (164)
    on left: 120 121 122 123 124 125 126 127 128, on right: 141
method_call (165)
    on left: 129 130, on right: 123
selector_args (166)
    on left: 131 132 133, on right: 129 132 133
fragmented_string (167)
    on left: 134, on right: 112 125
fragment_or_ident_or_empty_list (168)
    on left: 135 136, on right: 134
fragment_or_ident_list (169)
    on left: 137 138 139 140, on right: 136 139 140
postfix_expression (170)
    on left: 141 142 143 144 145 146 147, on right: 142 143 144 145
    146 147 150
argument_expression_list (171)
    on left: 148 149, on right: 144 149
unary_expression (172)
    on left: 150 151 152 153 154 155, on right: 151 152 153 154 155
    156 157 158 159 194 195 196
multiplicative_expression (173)
    on left: 156 157 158 159, on right: 157 158 159 160 161 162
additive_expression (174)
    on left: 160 161 162, on right: 161 162 163 164 165
shift_expression (175)
    on left: 163 164 165, on right: 164 165 166 167 168 169 170
relational_expression (176)
    on left: 166 167 168 169 170, on right: 167 168 169 170 171 172
    173
equality_expression (177)
    on left: 171 172 173, on right: 172 173 174 175
and_expression (178)
    on left: 174 175, on right: 175 176 177
exclusive_or_expression (179)
    on left: 176 177, on right: 177 178 179
inclusive_or_expression (180)
    on left: 178 179, on right: 179 180 181
logical_and_expression (181)
    on left: 180 181, on right: 181 182 183
logical_or_expression (182)
    on left: 182 183, on right: 183 184 185 186 187 188
strcat_expression (183)
    on left: 184 185 186 187 188, on right: 185 186 187 188 189
strcat_or_func_expression (184)
    on left: 189 190, on right: 191 192
conditional_expression (185)
    on left: 191 192, on right: 192 193
assignment_expression (186)
    on left: 193 194 195 196, on right: 148 149 194 195 196 207
float_assignment_operator (187)
    on left: 197 198 199 200, on right: 195
int_assignment_operator (188)
    on left: 201 202 203 204 205 206, on right: 196
expression (189)
    on left: 207, on right: 55 67 68 99 102 114 115 116 117 118 119
    126 129 130 131 132 133 142 192 208 215 216 219 220
expression_statement (190)
    on left: 208, on right: 100
array_expression (191)
    on left: 209 210 211, on right: 127
map_expression (192)
    on left: 212 213 214, on right: 128
expression_list (193)
    on left: 215 216, on right: 27 210 211 216
map_pair_list (194)
    on left: 217 218, on right: 213 214 218
map_pair (195)
    on left: 219, on right: 217 218
function_expression (196)
    on left: 220, on right: 190


state 0

    0 $accept: . start $end

    "facet"     shift, and go to state 1
    "public"    shift, and go to state 2
    IDENTIFIER  shift, and go to state 3

    $default  reduce using rule 17 (is_public)

    start                        go to state 4
    declaration_list             go to state 5
    declaration                  go to state 6
    compound_declaration         go to state 7
    class_declaration            go to state 8
    is_public                    go to state 9
    object_declaration           go to state 10
    record_declaration           go to state 11
    connection_declaration       go to state 12
    state_declaration            go to state 13
    facet_declaration            go to state 14
    type_declaration             go to state 15
    slot_declaration             go to state 16
    slot_assignment_declaration  go to state 17
    function_declaration         go to state 18
    method_declaration           go to state 19


state 1

   48 facet_declaration: "facet" . IDENTIFIER end_token compound_body optional_end_token

    IDENTIFIER  shift, and go to state 20


state 2

   18 is_public: "public" .

    $default  reduce using rule 18 (is_public)


state 3

   43 object_declaration: IDENTIFIER . parent_specifier facet_list_specifier end_token compound_body optional_end_token
   68 slot_assignment_declaration: IDENTIFIER . '=' expression end_token

    '='  shift, and go to state 21
    ':'  shift, and go to state 22

    $default  reduce using rule 25 (parent_specifier)

    parent_specifier  go to state 23


state 4

    0 $accept: start . $end

    $end  shift, and go to state 24


state 5

    1 start: declaration_list .
    3 declaration_list: declaration_list . declaration

    "facet"     shift, and go to state 1
    "public"    shift, and go to state 2
    IDENTIFIER  shift, and go to state 3

    $end      reduce using rule 1 (start)
    $default  reduce using rule 17 (is_public)

    declaration                  go to state 25
    compound_declaration         go to state 7
    class_declaration            go to state 8
    is_public                    go to state 9
    object_declaration           go to state 10
    record_declaration           go to state 11
    connection_declaration       go to state 12
    state_declaration            go to state 13
    facet_declaration            go to state 14
    type_declaration             go to state 15
    slot_declaration             go to state 16
    slot_assignment_declaration  go to state 17
    function_declaration         go to state 18
    method_declaration           go to state 19


state 6

    2 declaration_list: declaration .

    $default  reduce using rule 2 (declaration_list)


state 7

    4 declaration: compound_declaration .

    $default  reduce using rule 4 (declaration)


state 8

   12 compound_declaration: class_declaration .

    $default  reduce using rule 12 (compound_declaration)


state 9

   16 class_declaration: is_public . "class" IDENTIFIER declaration_parameters parent_specifier facet_list_specifier transmission_list_specifier end_token compound_body optional_end_token
   42 object_declaration: is_public . "object" IDENTIFIER parent_specifier facet_list_specifier end_token compound_body optional_end_token
   44 record_declaration: is_public . "record" IDENTIFIER declaration_parameters parent_specifier facet_list_specifier end_token compound_body optional_end_token
   45 connection_declaration: is_public . "connection" IDENTIFIER parent_specifier between_specifier end_token compound_body optional_end_token
   47 state_declaration: is_public . "state" IDENTIFIER transmission_list_specifier end_token compound_body optional_end_token
   49 type_declaration: is_public . "type" IDENTIFIER type_specifier end_token optional_end_token
   60 slot_declaration: is_public . is_shared "var" IDENTIFIER optional_assignment_expression end_token
   61                 | is_public . is_shared "var" IDENTIFIER ':' type_specifier optional_assignment_expression end_token
   69 function_declaration: is_public . is_shared "function" IDENTIFIER '(' optional_parameter_list ')' optional_return_type facet_list_specifier end_token function_body optional_end_token
   70 method_declaration: is_public . is_shared "method" IDENTIFIER selector_decl_args optional_return_type facet_list_specifier end_token function_body optional_end_token
   71                   | is_public . is_shared "method" IDENTIFIER optional_return_type facet_list_specifier end_token function_body optional_end_token

    "state"       shift, and go to state 26
    "object"      shift, and go to state 27
    "class"       shift, and go to state 28
    "record"      shift, and go to state 29
    "connection"  shift, and go to state 30
    "shared"      shift, and go to state 31
    "type"        shift, and go to state 32

    $default  reduce using rule 64 (is_shared)

    is_shared  go to state 33


state 10

   13 compound_declaration: object_declaration .

    $default  reduce using rule 13 (compound_declaration)


state 11

   14 compound_declaration: record_declaration .

    $default  reduce using rule 14 (compound_declaration)


state 12

   15 compound_declaration: connection_declaration .

    $default  reduce using rule 15 (compound_declaration)


state 13

    5 declaration: state_declaration .

    $default  reduce using rule 5 (declaration)


state 14

    6 declaration: facet_declaration .

    $default  reduce using rule 6 (declaration)


state 15

    7 declaration: type_declaration .

    $default  reduce using rule 7 (declaration)


state 16

    8 declaration: slot_declaration .

    $default  reduce using rule 8 (declaration)


state 17

    9 declaration: slot_assignment_declaration .

    $default  reduce using rule 9 (declaration)


state 18

   10 declaration: function_declaration .

    $default  reduce using rule 10 (declaration)


state 19

   11 declaration: method_declaration .

    $default  reduce using rule 11 (declaration)


state 20

   48 facet_declaration: "facet" IDENTIFIER . end_token compound_body optional_end_token

    END_TOK  shift, and go to state 34

    end_token  go to state 35


state 21

   68 slot_assignment_declaration: IDENTIFIER '=' . expression end_token

    "function"       shift, and go to state 36
    INT_CONSTANT     shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    FLOAT_CONSTANT   shift, and go to state 39
    PATH             shift, and go to state 40
    STRING_FRAGMENT  shift, and go to state 41
    '-'              shift, and go to state 42
    '('              shift, and go to state 43
    '{'              shift, and go to state 44
    '~'              shift, and go to state 45
    '!'              shift, and go to state 46
    "--"             shift, and go to state 47
    "++"             shift, and go to state 48
    '['              shift, and go to state 49

    primary_expression         go to state 50
    method_call                go to state 51
    fragmented_string          go to state 52
    postfix_expression         go to state 53
    unary_expression           go to state 54
    multiplicative_expression  go to state 55
    additive_expression        go to state 56
    shift_expression           go to state 57
    relational_expression      go to state 58
    equality_expression        go to state 59
    and_expression             go to state 60
    exclusive_or_expression    go to state 61
    inclusive_or_expression    go to state 62
    logical_and_expression     go to state 63
    logical_or_expression      go to state 64
    strcat_expression          go to state 65
    strcat_or_func_expression  go to state 66
    conditional_expression     go to state 67
    assignment_expression      go to state 68
    expression                 go to state 69
    array_expression           go to state 70
    map_expression             go to state 71
    function_expression        go to state 72


state 22

   26 parent_specifier: ':' . locator
   27                 | ':' . locator '(' expression_list ')'

    IDENTIFIER  shift, and go to state 73
    PATH        shift, and go to state 74

    locator  go to state 75


state 23

   43 object_declaration: IDENTIFIER parent_specifier . facet_list_specifier end_token compound_body optional_end_token

    "in"  shift, and go to state 76

    $default  reduce using rule 30 (facet_list_specifier)

    facet_list_specifier  go to state 77


state 24

    0 $accept: start $end .

    $default  accept


state 25

    3 declaration_list: declaration_list declaration .

    $default  reduce using rule 3 (declaration_list)


state 26

   47 state_declaration: is_public "state" . IDENTIFIER transmission_list_specifier end_token compound_body optional_end_token

    IDENTIFIER  shift, and go to state 78


state 27

   42 object_declaration: is_public "object" . IDENTIFIER parent_specifier facet_list_specifier end_token compound_body optional_end_token

    IDENTIFIER  shift, and go to state 79


state 28

   16 class_declaration: is_public "class" . IDENTIFIER declaration_parameters parent_specifier facet_list_specifier transmission_list_specifier end_token compound_body optional_end_token

    IDENTIFIER  shift, and go to state 80


state 29

   44 record_declaration: is_public "record" . IDENTIFIER declaration_parameters parent_specifier facet_list_specifier end_token compound_body optional_end_token

    IDENTIFIER  shift, and go to state 81


state 30

   45 connection_declaration: is_public "connection" . IDENTIFIER parent_specifier between_specifier end_token compound_body optional_end_token

    IDENTIFIER  shift, and go to state 82


state 31

   65 is_shared: "shared" .

    $default  reduce using rule 65 (is_shared)


state 32

   49 type_declaration: is_public "type" . IDENTIFIER type_specifier end_token optional_end_token

    IDENTIFIER  shift, and go to state 83


state 33

   60 slot_declaration: is_public is_shared . "var" IDENTIFIER optional_assignment_expression end_token
   61                 | is_public is_shared . "var" IDENTIFIER ':' type_specifier optional_assignment_expression end_token
   69 function_declaration: is_public is_shared . "function" IDENTIFIER '(' optional_parameter_list ')' optional_return_type facet_list_specifier end_token function_body optional_end_token
   70 method_declaration: is_public is_shared . "method" IDENTIFIER selector_decl_args optional_return_type facet_list_specifier end_token function_body optional_end_token
   71                   | is_public is_shared . "method" IDENTIFIER optional_return_type facet_list_specifier end_token function_body optional_end_token

    "function"  shift, and go to state 84
    "method"    shift, and go to state 85
    "var"       shift, and go to state 86


state 34

   79 end_token: END_TOK .

    $default  reduce using rule 79 (end_token)


state 35

   48 facet_declaration: "facet" IDENTIFIER end_token . compound_body optional_end_token

    INDENT  shift, and go to state 87

    $default  reduce using rule 39 (compound_body)

    compound_body  go to state 88


state 36

  220 function_expression: "function" . '(' optional_parameter_list ')' optional_return_type '(' expression ')'

    '('  shift, and go to state 89


state 37

  122 primary_expression: INT_CONSTANT .

    $default  reduce using rule 122 (primary_expression)


state 38

  120 primary_expression: IDENTIFIER .

    $default  reduce using rule 120 (primary_expression)


state 39

  124 primary_expression: FLOAT_CONSTANT .

    $default  reduce using rule 124 (primary_expression)


state 40

  121 primary_expression: PATH .

    $default  reduce using rule 121 (primary_expression)


state 41

  134 fragmented_string: STRING_FRAGMENT . fragment_or_ident_or_empty_list STRING_END

    IDENTIFIER       shift, and go to state 90
    STRING_FRAGMENT  shift, and go to state 91

    $default  reduce using rule 135 (fragment_or_ident_or_empty_list)

    fragment_or_ident_or_empty_list  go to state 92
    fragment_or_ident_list           go to state 93


state 42

  153 unary_expression: '-' . unary_expression

    INT_CONSTANT     shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    FLOAT_CONSTANT   shift, and go to state 39
    PATH             shift, and go to state 40
    STRING_FRAGMENT  shift, and go to state 41
    '-'              shift, and go to state 42
    '('              shift, and go to state 43
    '{'              shift, and go to state 44
    '~'              shift, and go to state 45
    '!'              shift, and go to state 46
    "--"             shift, and go to state 47
    "++"             shift, and go to state 48
    '['              shift, and go to state 49

    primary_expression  go to state 50
    method_call         go to state 51
    fragmented_string   go to state 52
    postfix_expression  go to state 53
    unary_expression    go to state 94
    array_expression    go to state 70
    map_expression      go to state 71


state 43

  126 primary_expression: '(' . expression ')'

    "function"       shift, and go to state 36
    INT_CONSTANT     shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    FLOAT_CONSTANT   shift, and go to state 39
    PATH             shift, and go to state 40
    STRING_FRAGMENT  shift, and go to state 41
    '-'              shift, and go to state 42
    '('              shift, and go to state 43
    '{'              shift, and go to state 44
    '~'              shift, and go to state 45
    '!'              shift, and go to state 46
    "--"             shift, and go to state 47
    "++"             shift, and go to state 48
    '['              shift, and go to state 49

    primary_expression         go to state 50
    method_call                go to state 51
    fragmented_string          go to state 52
    postfix_expression         go to state 53
    unary_expression           go to state 54
    multiplicative_expression  go to state 55
    additive_expression        go to state 56
    shift_expression           go to state 57
    relational_expression      go to state 58
    equality_expression        go to state 59
    and_expression             go to state 60
    exclusive_or_expression    go to state 61
    inclusive_or_expression    go to state 62
    logical_and_expression     go to state 63
    logical_or_expression      go to state 64
    strcat_expression          go to state 65
    strcat_or_func_expression  go to state 66
    conditional_expression     go to state 67
    assignment_expression      go to state 68
    expression                 go to state 95
    array_expression           go to state 70
    map_expression             go to state 71
    function_expression        go to state 72


state 44

  212 map_expression: '{' . '}'
  213               | '{' . map_pair_list '}'
  214               | '{' . map_pair_list ',' '}'

    "function"       shift, and go to state 36
    INT_CONSTANT     shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    FLOAT_CONSTANT   shift, and go to state 39
    PATH             shift, and go to state 40
    STRING_FRAGMENT  shift, and go to state 41
    '-'              shift, and go to state 42
    '('              shift, and go to state 43
    '{'              shift, and go to state 44
    '}'              shift, and go to state 96
    '~'              shift, and go to state 45
    '!'              shift, and go to state 46
    "--"             shift, and go to state 47
    "++"             shift, and go to state 48
    '['              shift, and go to state 49

    primary_expression         go to state 50
    method_call                go to state 51
    fragmented_string          go to state 52
    postfix_expression         go to state 53
    unary_expression           go to state 54
    multiplicative_expression  go to state 55
    additive_expression        go to state 56
    shift_expression           go to state 57
    relational_expression      go to state 58
    equality_expression        go to state 59
    and_expression             go to state 60
    exclusive_or_expression    go to state 61
    inclusive_or_expression    go to state 62
    logical_and_expression     go to state 63
    logical_or_expression      go to state 64
    strcat_expression          go to state 65
    strcat_or_func_expression  go to state 66
    conditional_expression     go to state 67
    assignment_expression      go to state 68
    expression                 go to state 97
    array_expression           go to state 70
    map_expression             go to state 71
    map_pair_list              go to state 98
    map_pair                   go to state 99
    function_expression        go to state 72


state 45

  155 unary_expression: '~' . unary_expression

    INT_CONSTANT     shift, and go to state 37
    IDENTIFIER       shift, and go to state 38
    FLOAT_CONSTANT   shift, and go to state 39
    PATH             shift, and go to state 40
    STRING_FRAGMENT  shift, and go to state 41
    '-'              shift, and go to state 42
    '('              shift, and go to state 43
    '{'              shift, and go to state 44
    '~'              shift, and go to state 45
    '!'              shift, and go to state 46
    "--"             shift, and go to state 47
    "++"             shift, and go to state 48
    '['              shift, and go to state 49

    primary_expression  go to state 50
    method_call         go to state 51
    fragmented_string   go to state 52
    postfix_expression  go to state 53
    unary_expression    go to state 100
    array_expression    go to state 70
    map_expression      go to state 71


state 46

  154 unary_expression: '!' . unary_expression
